[gd_scene load_steps=57 format=3 uid="uid://dvkvvatyfwaxx"]

[ext_resource type="Script" uid="uid://dt6uoi0isaqgt" path="res://scripts/levels/MainScene.gd" id="1_c6dvc"]
[ext_resource type="Script" uid="uid://bkjjjcpmujyx2" path="res://scripts/levels/cameraTarget.gd" id="3_pjux3"]
[ext_resource type="Texture2D" uid="uid://b1cvbm2c5jhm2" path="res://assets/sprites/collaps spritesheet.png" id="4_08o8g"]
[ext_resource type="Texture2D" uid="uid://bivldwoffgwtq" path="res://assets/sprites/pace spritesheet.png" id="4_o3jky"]
[ext_resource type="Texture2D" uid="uid://b7r5kt3i2q6wy" path="res://assets/sprites/collapsed chicken.png" id="5_0cxu4"]
[ext_resource type="Texture2D" uid="uid://dufhjeqkm4hxe" path="res://assets/backgrounds/sky.png" id="5_u1u68"]
[ext_resource type="Script" uid="uid://hgqxubwif7ba" path="res://scripts/levels/background.gd" id="5_x537r"]
[ext_resource type="Texture2D" uid="uid://bd1fobygvfome" path="res://assets/backgrounds/hills.png" id="6_x537r"]
[ext_resource type="Texture2D" uid="uid://dkf3v7hlc0dqy" path="res://assets/backgrounds/farm.png" id="7_cfq0f"]
[ext_resource type="Texture2D" uid="uid://bujqlgnvfrldq" path="res://assets/sprites/peck spritesheet.png" id="7_kp0ql"]
[ext_resource type="AudioStream" uid="uid://c0vuttq76ch02" path="res://assets/audio/chicken-cluking.mp3" id="8_xnxdc"]
[ext_resource type="Texture2D" uid="uid://k2ecuqawnsyl" path="res://assets/backgrounds/grass.png" id="9_cfq0f"]
[ext_resource type="Script" uid="uid://w2d7be634d6n" path="res://scripts/levels/camera2d.gd" id="9_x537r"]
[ext_resource type="AudioStream" uid="uid://cgxy41h5biqbk" path="res://assets/audio/positive sound.mp3" id="9_xnxdc"]
[ext_resource type="AudioStream" uid="uid://ms8sbbguuwsg" path="res://assets/audio/negative sound.mp3" id="10_0ehpd"]
[ext_resource type="AudioStream" uid="uid://c2e088kbjnnnr" path="res://assets/audio/game over.mp3" id="14_08o8g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y15d6"]
atlas = ExtResource("4_08o8g")
region = Rect2(341, 0, 341, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_u55b3"]
atlas = ExtResource("4_08o8g")
region = Rect2(682, 0, 341, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiest"]
atlas = ExtResource("4_08o8g")
region = Rect2(341, 341, 341, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_kik7w"]
atlas = ExtResource("4_08o8g")
region = Rect2(341, 682, 341, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_e65ta"]
atlas = ExtResource("4_o3jky")
region = Rect2(1620, 909, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3jky"]
atlas = ExtResource("4_o3jky")
region = Rect2(0, 0, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp0ql"]
atlas = ExtResource("4_o3jky")
region = Rect2(540, 0, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_08o8g"]
atlas = ExtResource("4_o3jky")
region = Rect2(1080, 0, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cxu4"]
atlas = ExtResource("4_o3jky")
region = Rect2(1620, 0, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnxdc"]
atlas = ExtResource("4_o3jky")
region = Rect2(2160, 0, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ehpd"]
atlas = ExtResource("4_o3jky")
region = Rect2(0, 303, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wjpf"]
atlas = ExtResource("4_o3jky")
region = Rect2(540, 303, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_25dfr"]
atlas = ExtResource("4_o3jky")
region = Rect2(1080, 303, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjvyo"]
atlas = ExtResource("4_o3jky")
region = Rect2(1620, 303, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_2phbr"]
atlas = ExtResource("4_o3jky")
region = Rect2(2160, 303, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkg2b"]
atlas = ExtResource("4_o3jky")
region = Rect2(0, 606, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ns3k"]
atlas = ExtResource("4_o3jky")
region = Rect2(540, 606, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7pbh"]
atlas = ExtResource("4_o3jky")
region = Rect2(1080, 606, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye0jt"]
atlas = ExtResource("4_o3jky")
region = Rect2(1620, 606, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wwop"]
atlas = ExtResource("4_o3jky")
region = Rect2(2160, 606, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcw2p"]
atlas = ExtResource("4_o3jky")
region = Rect2(0, 909, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_qavw1"]
atlas = ExtResource("4_o3jky")
region = Rect2(540, 909, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7ifx"]
atlas = ExtResource("4_o3jky")
region = Rect2(1080, 909, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwqb8"]
atlas = ExtResource("4_o3jky")
region = Rect2(1620, 909, 540, 303)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4jp2"]
atlas = ExtResource("7_kp0ql")
region = Rect2(3144, 294, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ikpr"]
atlas = ExtResource("7_kp0ql")
region = Rect2(0, 588, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_doyhq"]
atlas = ExtResource("7_kp0ql")
region = Rect2(524, 588, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_2so2y"]
atlas = ExtResource("7_kp0ql")
region = Rect2(1048, 588, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yh6i"]
atlas = ExtResource("7_kp0ql")
region = Rect2(1572, 588, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwxld"]
atlas = ExtResource("7_kp0ql")
region = Rect2(2096, 588, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw1g3"]
atlas = ExtResource("7_kp0ql")
region = Rect2(2620, 588, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc0gu"]
atlas = ExtResource("7_kp0ql")
region = Rect2(3144, 588, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnen4"]
atlas = ExtResource("7_kp0ql")
region = Rect2(0, 882, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5chl"]
atlas = ExtResource("7_kp0ql")
region = Rect2(524, 882, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2mks"]
atlas = ExtResource("7_kp0ql")
region = Rect2(1048, 882, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ha8j"]
atlas = ExtResource("7_kp0ql")
region = Rect2(1572, 882, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuwja"]
atlas = ExtResource("7_kp0ql")
region = Rect2(2096, 882, 524, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8282"]
atlas = ExtResource("7_kp0ql")
region = Rect2(2620, 882, 524, 294)

[sub_resource type="SpriteFrames" id="SpriteFrames_pou4m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y15d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u55b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiest")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kik7w")
}, {
"duration": 1.0,
"texture": ExtResource("5_0cxu4")
}],
"loop": false,
"name": &"collapse",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e65ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3jky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp0ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08o8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cxu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnxdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ehpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wjpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25dfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjvyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2phbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkg2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ns3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7pbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye0jt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wwop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcw2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qavw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7ifx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwqb8")
}],
"loop": true,
"name": &"pace",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4jp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ikpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doyhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2so2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yh6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwxld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw1g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc0gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnen4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5chl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2mks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ha8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuwja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8282")
}],
"loop": false,
"name": &"peck",
"speed": 40.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o3jky"]
radius = 3.0

[node name="MainScene" type="Node2D"]
script = ExtResource("1_c6dvc")

[node name="ItemContainer" type="Node2D" parent="."]
z_index = 2

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
position = Vector2(480, 270)
scale = Vector2(0.642858, 0.646174)
position_smoothing_speed = 10.0
script = ExtResource("9_x537r")
target = NodePath("../CameraTarget")

[node name="CameraTarget" type="Node2D" parent="."]
position = Vector2(0, 120)
script = ExtResource("3_pjux3")

[node name="chicken" type="AnimatedSprite2D" parent="CameraTarget"]
position = Vector2(0, 130)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_pou4m")
animation = &"peck"
speed_scale = 0.5

[node name="ChickenSound" type="AudioStreamPlayer2D" parent="CameraTarget/chicken"]
stream = ExtResource("8_xnxdc")

[node name="ChickenTimer" type="Timer" parent="CameraTarget/chicken"]

[node name="PeckArea" type="Area2D" parent="CameraTarget/chicken"]
position = Vector2(0, -602.5)
scale = Vector2(2.74793, 2.96417)
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraTarget/chicken/PeckArea"]
position = Vector2(48.2181, 242.901)
shape = SubResource("CircleShape2D_o3jky")

[node name="PeckWormSound" type="AudioStreamPlayer2D" parent="CameraTarget/chicken"]
position = Vector2(0, -625)
scale = Vector2(2.5, 2.5)
stream = ExtResource("9_xnxdc")

[node name="PeckMushroomSound" type="AudioStreamPlayer2D" parent="CameraTarget/chicken"]
position = Vector2(0, -625)
scale = Vector2(2.5, 2.5)
stream = ExtResource("10_0ehpd")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("5_x537r")

[node name="SkyLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(908, 0)

[node name="SkySprite" type="Sprite2D" parent="ParallaxBackground/SkyLayer"]
texture_filter = 2
texture_repeat = 2
position = Vector2(0, -14)
texture = ExtResource("5_u1u68")
centered = false

[node name="HillsLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(1080, 0)

[node name="HillsSprite" type="Sprite2D" parent="ParallaxBackground/HillsLayer"]
texture_repeat = 2
position = Vector2(0, 80)
texture = ExtResource("6_x537r")
centered = false

[node name="BarnLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.1)
motion_mirroring = Vector2(1080, 0)

[node name="BarnSprite" type="Sprite2D" parent="ParallaxBackground/BarnLayer"]
texture_repeat = 2
position = Vector2(0, 220)
texture = ExtResource("7_cfq0f")
centered = false

[node name="GrassLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-9, -127)
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(1916, 0)

[node name="GrassSprite" type="Sprite2D" parent="ParallaxBackground/GrassLayer"]
texture_repeat = 2
position = Vector2(0, 352)
texture = ExtResource("9_cfq0f")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StaminaBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 64.0
offset_top = 41.0
offset_right = 233.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0.0082778, 3.5722e-09, 5.64032e-10, 1)
theme_override_colors/font_outline_color = Color(0.823529, 0.258824, 0.223529, 1)
value = 50.0

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_08o8g")

[connection signal="animation_finished" from="CameraTarget/chicken" to="CameraTarget" method="_on_chicken_animation_finished"]
[connection signal="timeout" from="CameraTarget/chicken/ChickenTimer" to="." method="_on_ChickenTimer_timeout"]
[connection signal="area_entered" from="CameraTarget/chicken/PeckArea" to="CameraTarget" method="_on_PeckArea_area_entered"]
